# Aegis

./: .gitattributes  README.md
GenAPI/: .dockerignore  docker-compose.yml  go.mod  go.sum  mitre_data.csv
GenAPI/cmd/api/: main.go
GenAPI/cmd/seed/: main.go
GenAPI/configs/: config.go  config.yml
GenAPI/internal/core/db/: pgx.go  qdrant.go
GenAPI/internal/core/router/: router.go
GenAPI/internal/modules/ai/: embedding.go  sentinel.go
GenAPI/internal/modules/brazil/: brazil.go
GenAPI/internal/modules/telemetry/: handler.go  hub.go
aegis-dashboard/: package-lock.json  package.json
aegis-dashboard/backend/: server.js
aegis-dashboard/src/: App.css  App.jsx  index.css  main.jsx
aegis-dashboard/src/app/: App.jsx  routes.jsx
aegis-dashboard/src/components/: AttackLogs.jsx  Card.jsx  Navbar.jsx  Sidebar.jsx  ThreatIntel.jsx  TopBar.jsx
aegis-dashboard/src/components/ui/: Layout.jsx
aegis-dashboard/src/context/: SocketContext.jsx
aegis-dashboard/src/hooks/: useSocket.js
aegis-dashboard/src/pages/: Dashboard.jsx  Honeypod.jsx  Sentinel.jsx  Telemetry.jsx  Test.jsx
aegis-dashboard/src/services/: socket.js
aegis-dashboard/src/styles/: dashboard.css  global.css  honeypot.css  navbar.css  sentinel.css  telemetry.css
client/: Cargo.toml  build.rs
client/ebpf/: aegis_ebpf.c
client/src/: main.rs
client/src/dta/: mod.rs  tracker.rs
docs/telemetry/: ebpf.md
honeypod/: Dockerfile  main.go  mock_apt.sh
