[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { version = "0.13.1", features = ["async_tokio"]}
aya-log = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
